--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: This Website
-dateUpdated: '2023-02-20'
+dateUpdated: '2023-04-26'
 description:
   Release notes, TODO list and ideas and for further development of this site.
 pin: 20
@@ -70,7 +70,7 @@ https://splitbee.io/
 
 https://giscus.app/
 
-#### &#9745; Replace Styled Components with Module SCSS and Tailwind
+#### &#9745; Replace Styled Components with Linaria CSS and Tailwind CSS
 
 #### &#9744; Add Site-Wide Search
 
