--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -37,7 +37,7 @@ https://www.ebay.co.uk/itm/204184579333
 
 ### Printing surface mesh visualisation
 
-* [Visualize 3D mesh of our printing surface with Marlin 2.x (and without Octoprint)](https://3dwork.io/en/visualize-3d-mesh/)
+- [Visualize 3D mesh of our printing surface with Marlin 2.x (and without Octoprint)](https://3dwork.io/en/visualize-3d-mesh/)
 
 ### References
 
