--- a/pages/notes/ni-compactdaq/2023-04-25.index.en.mdx
+++ b/pages/notes/ni-compactdaq/2023-04-25.index.en.mdx
@@ -9,9 +9,9 @@ description:
 
 #### References
 
-[Python Resources for NI Hardware and Software](https://www.ni.com/en-gb/support/documentation/supplemental/16/python-resources-for-ni-hardware-and-software.html)<br />
-[NI-DAQmx Python Documentation](https://nidaqmx-python.readthedocs.io/en/latest/)<br />
-[NI Modular Instruments Python Documentation](https://www.ni.com/en-gb/support/documentation/supplemental/16/python-resources-for-ni-hardware-and-software.html)
+- [Python Resources for NI Hardware and Software](https://www.ni.com/en-gb/support/documentation/supplemental/16/python-resources-for-ni-hardware-and-software.html)
+- [NI-DAQmx Python Documentation](https://nidaqmx-python.readthedocs.io/en/latest/)
+- [NI Modular Instruments Python Documentation](https://www.ni.com/en-gb/support/documentation/supplemental/16/python-resources-for-ni-hardware-and-software.html)
 
 ## Linux
 
@@ -40,12 +40,12 @@ Use `ni-hwcfg-utility` instead, as explained in this
 
 #### References
 
-[Hardware Configuration Utility](https://www.ni.com/docs/en-US/bundle/hardwareconfigurationutility/page/definition.html)<br />
-[Launching Hardware Configuration Utility](https://www.ni.com/docs/en-US/bundle/hardwareconfigurationutility/page/launch-hwcu.html)<br />
-[Windows vs Desktop Linux DAQmx Experience Differences](https://www.ni.com/en-gb/support/documentation/supplemental/18/windows-vs-desktop-linux-daqmx-experience-differences.html)
+- [Hardware Configuration Utility](https://www.ni.com/docs/en-US/bundle/hardwareconfigurationutility/page/definition.html)
+- [Launching Hardware Configuration Utility](https://www.ni.com/docs/en-US/bundle/hardwareconfigurationutility/page/launch-hwcu.html)
+- [Windows vs Desktop Linux DAQmx Experience Differences](https://www.ni.com/en-gb/support/documentation/supplemental/18/windows-vs-desktop-linux-daqmx-experience-differences.html)
 
 ## Windows
 
 ### Drivers and Software
 
-https://www.ni.com/en-gb/support/downloads/drivers/download.ni-daq-mx.html#480879
+- [NI-DAQmx Download](https://www.ni.com/en-gb/support/downloads/drivers/download.ni-daq-mx.html#480879)
