--- a/pages/notes/python-poetry/2023-04-27.index.en.mdx
+++ b/pages/notes/python-poetry/2023-04-27.index.en.mdx
@@ -60,3 +60,4 @@ poetry completions bash >> ~/.bash_completion
 ### References
 
 - [Poetry Docs: Installing Manually](https://python-poetry.org/docs/#installing-manually)
+- [Pyright Configuration](https://github.com/microsoft/pyright/blob/main/docs/configuration.md)
