--- a/pages/notes/pyenv/2023-05-04.index.en.mdx
+++ b/pages/notes/pyenv/2023-05-04.index.en.mdx
@@ -1,13 +1,13 @@
 ---
 title: pyenv Notes
-dateUpdated: '2023-04-27'
+dateUpdated: '2023-05-04'
 description:
   Collection of pyenv application hints and resource references.
 ---
 
 ## Installing pyenv on Ubuntu 22.04 LTS
 
-Dependencies
+Dependencies:
 
 ```bash
 sudo apt install tk-dev libssl-dev libreadline-dev
