--- a/pages/notes/pyenv/2023-05-04.index.en.mdx
+++ b/pages/notes/pyenv/2023-05-04.index.en.mdx
@@ -7,8 +7,14 @@ description:
 
 ## Installing pyenv on Ubuntu 22.04 LTS
 
-Dependencies:
+### References
 
 ```bash
-sudo apt install tk-dev libssl-dev libreadline-dev
+sudo apt install make build-essential tk-dev libssl-dev libreadline-dev \
+                 libncurses-dev libbz2-dev zlib1g-dev libsqlite3-dev \
+                 libffi-devliblzma-dev xz-utils
 ```
+
+### References
+
+- [Modern Python part 1: start a project with pyenv & poetry](https://www.adaltas.com/en/2021/06/09/pyrepo-project-initialization/)
