--- a/pages/notes/pyenv/2023-05-04.index.en.mdx
+++ b/pages/notes/pyenv/2023-05-04.index.en.mdx
@@ -7,7 +7,7 @@ description:
 
 ## Installing pyenv on Ubuntu 22.04 LTS
 
-### References
+### External Dependencies
 
 ```bash
 sudo apt install make build-essential tk-dev libssl-dev libreadline-dev \
