--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -14,6 +14,14 @@ me directly via email at v.rybynok@gmail.com.
 
 ### Concise Biography
 
+<figure>
+  <img
+    src="/static/about/me-0.jpg"
+    alt="Me"
+    priority
+  />
+</figure>
+
 One of my earliest childhood memories, from when I was perhaps 3 or 4 years old,
 is of helping my father build a light music box. This was during the time of the
 late Soviet Union, where it was difficult to obtain such devices from
@@ -115,3 +123,11 @@ diverse range of computer systems, from tiny 8-bit controllers to real-time
 network-synchronized sensor arrays. I can now proudly claim that I am "a
 physicist who thinks he is a programmer" and this time my physics skills need
 improvement!
+
+<figure>
+  <img
+    src="/static/about/me-1.jpg"
+    alt="Me"
+    priority
+  />
+</figure>
