--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -14,8 +14,8 @@ me directly via email at v.rybynok@gmail.com.
 
 ### Concise Biography
 
-<figure>
-  <img
+<figure className="w-1/3 my-0 ml-7 float-right">
+  <Image
     src="/static/about/me-0.jpg"
     alt="Me"
     priority
@@ -108,6 +108,14 @@ considerable progress in my research, receiving several grants and submitting
 two patent applications, the university decided to discontinue my non-invasive
 blood glucose monitoring project.
 
+<figure className="w-1/3 my-0 mr-7 float-left">
+  <Image
+    src="/static/about/me-1.jpg"
+    alt="Me Panting"
+    priority
+  />
+</figure>
+
 Although I was offered a rolling contract to continue other studies and teaching
 in the university, I decided to take a break from academia and pursue a further
 career in industry as an Embedded Software Engineer. Despite thinking of myself
@@ -123,11 +131,3 @@ diverse range of computer systems, from tiny 8-bit controllers to real-time
 network-synchronized sensor arrays. I can now proudly claim that I am "a
 physicist who thinks he is a programmer" and this time my physics skills need
 improvement!
-
-<figure>
-  <img
-    src="/static/about/me-1.jpg"
-    alt="Me"
-    priority
-  />
-</figure>
