--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -14,7 +14,7 @@ me directly via email at v.rybynok@gmail.com.
 
 ### Concise Biography
 
-<figure className="w-1/3 my-0 ml-7 float-right">
+<figure className="sm:w-1/3 sm:my-0 sm:ml-7 sm:float-right">
   <Image
     src="/static/about/me-0.jpg"
     alt="Me"
@@ -108,7 +108,7 @@ considerable progress in my research, receiving several grants and submitting
 two patent applications, the university decided to discontinue my non-invasive
 blood glucose monitoring project.
 
-<figure className="w-1/3 my-0 mr-7 float-left">
+<figure className="sm:w-1/3 sm:my-0 sm:mr-7 sm:float-left">
   <Image
     src="/static/about/me-1.jpg"
     alt="Me Panting"
