--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -53,6 +53,19 @@ Should be something similar to [nextra about](https://nextra.site/about)
 
 ### Longer and complex investigations
 
+#### &#9744; Prevent single line wrap around float
+
+This is mostly for my photos on the about page.
+
+https://stackoverflow.com/questions/14883495/prevent-single-word-from-wrapping-around-float-in-css-html<br />
+https://stackoverflow.com/questions/14811049/awkward-line-wrap-around-image
+
+#### &#9744; Image float left/right and bottom
+
+This is mostly for my photo in the bottom of the about page.
+
+https://css-tricks.com/float-an-element-to-the-bottom-corner/
+
 #### &#9744; Use @next/font
 
 https://nextjs.org/docs/api-reference/next/font<br />
