--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -6,7 +6,7 @@ description: About me
 
 ### Private Data
 
-I prefer not to disclose certain types of information about myself, my family,
+I prefer not to disclose certain types of information about myself, my family
 or my friends on public internet resources. Therefore, on this page, I will not
 provide details of my current employer or location beyond my city of
 residence. If you require additional information or my full CV, please contact
@@ -14,7 +14,10 @@ me directly via email at v.rybynok@gmail.com.
 
 ### Concise Biography
 
-<figure className="sm:w-1/3 sm:my-0 sm:ml-7 sm:float-right">
+<figure
+  className="hidden sm:float-right sm:mt-0 sm:mb-2 sm:ml-7 sm:block
+    sm:w-1/3"
+>
   <Image
     src="/static/about/me-0.jpg"
     alt="Me"
@@ -30,6 +33,14 @@ amplifiers, and frequency filters were, as well as how to use lacquers to color
 incandescent light bulbs. All are still relevant today. Except, colouring
 incandescent bulbs - one, would, likely use LED lights for that purpose these
 days!
+
+<figure className="sm:hidden">
+  <Image
+    src="/static/about/me-0-square.jpg"
+    alt="Me"
+    priority
+  />
+</figure>
 
 My grandfather was the director of a factory that produced TV sets back in 80th.
 He always had some latest cool gadgets in his house, such as
@@ -108,7 +119,10 @@ considerable progress in my research, receiving several grants and submitting
 two patent applications, the university decided to discontinue my non-invasive
 blood glucose monitoring project.
 
-<figure className="sm:w-1/3 sm:my-0 sm:mr-7 sm:float-left">
+<figure
+  className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
+    sm:w-1/3"
+>
   <Image
     src="/static/about/me-1.jpg"
     alt="Me Panting"
@@ -124,6 +138,14 @@ skills needed improvement and that I required experience outside academia. In
 2014 I joined a mid-sized scientific instrumentation company in Cambridge as
 R&D&nbsp;Software Engineer to work on the user interface and control software
 for their cutting-edge analytical instruments.
+
+<figure className="sm:hidden">
+  <Image
+    src="/static/about/me-1-square.jpg"
+    alt="Me Panting"
+    priority
+  />
+</figure>
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
 the years, I have been presented with numerous opportunities to work on a
