--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -15,6 +15,13 @@ v.rybynok@gmail.com.
 
 ### Краткая Биография
 
+<figure
+  className="hidden sm:float-right sm:mt-0 sm:mb-2 sm:ml-7 sm:block
+    sm:w-1/3"
+>
+  <Image src="/static/about/me-0.jpg" alt="Я" priority />
+</figure>
+
 Одно из самых ранних воспоминаний моего детства, когда мне, было наверное 3 или
 4 года, это как мы с отцом собираем светомузыку для установки на шкаф в большой
 комнате. Это происходило во время позднего Советского Союза, в начале
@@ -24,6 +31,10 @@ v.rybynok@gmail.com.
 для окрашивания ламп накаливания. Все это по-прежнему актуально в наши дни. За
 исключением, возможно, окрашивания ламп накаливания - для этой цели в наше
 время, больше подойдут лампы на светодиодах!
+
+<figure className="sm:hidden">
+  <Image src="/static/about/me-0-square.jpg" alt="Я" priority />
+</figure>
 
 Мой дедушка был директором завода, который производил телевизоры в 80-х годах. В
 его доме всегда было много интересных новинок электроники, таких как
@@ -88,10 +99,17 @@ v.rybynok@gmail.com.
 финансовыми трудностями. Правительство перестало предоставлять студенческие
 займы без процентов, а студенты из Великобритании и Евросоюза стали вынуждены
 платить за обучение по-тем же расценкам, как студенты из других стран. Кроме
-того, значительно сократились средства выделяемые на научные
-исследования. Несмотря на значительный прогресс в исследованиях, получения
-нескольких грантов и подачу двух заявок на патенты, университет решил прекратить
-мой проект по неинвазивному измерению содержания глюкозы в крови.
+того, значительно сократились средства выделяемые на научные исследования.
+Несмотря на значительный прогресс в исследованиях, получения нескольких грантов
+и подачу двух заявок на патенты, университет решил прекратить мой проект по
+неинвазивному измерению содержания глюкозы в крови.
+
+<figure
+  className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
+    sm:w-1/3"
+>
+  <Image src="/static/about/me-1.jpg" alt="Я, гребу" priority />
+</figure>
 
 Хотя мне был предложен контракт для продолжения научной работы в других областях
 и преподавания в университете, я решил взять перерыв в академической
@@ -103,6 +121,10 @@ v.rybynok@gmail.com.
 качестве инженера-программиста-исследователя, чтобы работать над интерфейсами
 пользователя и системами управления для передовых измерительных и аналитических
 приборов, которые производит компания.
+
+<figure className="sm:hidden">
+  <Image src="/static/about/me-1-square.jpg" alt="Я, гребу" priority />
+</figure>
 
 В настоящий момент я живу в Кембридже и продолжаю работать в той же компании. За
 все годы работы мне представилось множество возможностей поработать с различными
