--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -6,11 +6,11 @@ description: About me
 
 ### Private Data
 
-I prefer not to disclose certain types of information about myself, my family
-or my friends on public internet resources. Therefore, on this page, I will not
-provide details of my current employer or location beyond my city of
-residence. If you require additional information or my full CV, please contact
-me directly via email at v.rybynok@gmail.com.
+I prefer not to disclose certain types of information about myself, my family or
+my friends on public internet resources. Therefore, on this page, I will not
+provide details of my current employer or location beyond my city of residence.
+If you require additional information or my full CV, please contact me directly
+via email at v.rybynok@gmail.com.
 
 ### Concise Biography
 
@@ -18,11 +18,7 @@ me directly via email at v.rybynok@gmail.com.
   className="hidden sm:float-right sm:mt-0 sm:mb-2 sm:ml-7 sm:block
     sm:w-1/3"
 >
-  <Image
-    src="/static/about/me-0.jpg"
-    alt="Me"
-    priority
-  />
+  <Image src="/static/about/me-0.jpg" alt="Me" priority />
 </figure>
 
 One of my earliest childhood memories, from when I was perhaps 3 or 4 years old,
@@ -35,11 +31,7 @@ incandescent bulbs - one, would, likely use LED lights for that purpose these
 days!
 
 <figure className="sm:hidden">
-  <Image
-    src="/static/about/me-0-square.jpg"
-    alt="Me"
-    priority
-  />
+  <Image src="/static/about/me-0-square.jpg" alt="Me" priority />
 </figure>
 
 My grandfather was the director of a factory that produced TV sets back in 80th.
@@ -52,8 +44,8 @@ machines soon became my passion, my profession, and a lifestyle.
 
 My native language is Russian and when I first started using computers I did not
 even know how to read Latin alphabet. Yet, I had a concept of computer program
-and [Pravetz&nbsp;8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
-English with examples written in BASIC. I began by coping examples into REPL
+and [Pravetz&nbsp;8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual
+in English with examples written in BASIC. I began by coping examples into REPL
 console and translating the manual into Russian with a dictionary, word-by-word.
 Since I did not know how to pronounce English words correctly I invented my own
 pronunciation&nbsp;– some of those words still linger in my accent even after
@@ -123,11 +115,7 @@ blood glucose monitoring project.
   className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
     sm:w-1/3"
 >
-  <Image
-    src="/static/about/me-1.jpg"
-    alt="Me Panting"
-    priority
-  />
+  <Image src="/static/about/me-1.jpg" alt="Me Panting" />
 </figure>
 
 Although I was offered a rolling contract to continue other studies and teaching
@@ -140,11 +128,7 @@ R&D&nbsp;Software Engineer to work on the user interface and control software
 for their cutting-edge analytical instruments.
 
 <figure className="sm:hidden">
-  <Image
-    src="/static/about/me-1-square.jpg"
-    alt="Me Panting"
-    priority
-  />
+  <Image src="/static/about/me-1-square.jpg" alt="Me Panting" />
 </figure>
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
