--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -115,7 +115,7 @@ blood glucose monitoring project.
   className="hidden sm:float-left sm:mt-0 sm:mb-2 sm:mr-7 sm:block
     sm:w-1/3"
 >
-  <Image src="/static/about/me-1.jpg" alt="Me Panting" />
+  <Image src="/static/about/me-1.jpg" alt="Me Panting" priority />
 </figure>
 
 Although I was offered a rolling contract to continue other studies and teaching
@@ -128,7 +128,7 @@ R&D&nbsp;Software Engineer to work on the user interface and control software
 for their cutting-edge analytical instruments.
 
 <figure className="sm:hidden">
-  <Image src="/static/about/me-1-square.jpg" alt="Me Panting" />
+  <Image src="/static/about/me-1-square.jpg" alt="Me Panting" priority />
 </figure>
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
