--- a/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
+++ b/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
@@ -60,7 +60,7 @@ sudo apt install make build-essential tk-dev libssl-dev libreadline-dev \
 
 - [Suggested build environment](https://github.com/pyenv/pyenv/wiki#suggested-build-environment)
 
-## Installing Python via pyenv
+## Building and Installing Python via pyenv
 
 To list available Python versions:
 
@@ -100,9 +100,10 @@ pyenv local <version>
 curl -sSL https://install.python-poetry.org | python -
 ```
 
-Python Poetry installation had multiple backwards-deprecating changes over time.
-Thus, the following are manual installation instructions in case if the above
-automatic installation gets deprecated once again.
+Python Poetry automatic installation procedure had multiple
+backwards-deprecating changes over time. Thus, the following are manual
+installation instructions in case if the above automatic installation script
+gets deprecated once again.
 
 ### Manual User Account Installation via pip with venv
 
