--- a/pages/notes/linux-samba/2023-04-25.index.en.mdx
+++ b/pages/notes/linux-samba/2023-04-25.index.en.mdx
@@ -66,7 +66,7 @@ mDNS-resolved name):
   <Image
     src="/static/notes/linux-samba/network-folder-mdns-name.png"
     alt=""
-    className={null}
+    className="rounded-none"
     priority
   />
   <figcaption>
@@ -81,7 +81,7 @@ message:
   <Image
     src="/static/notes/linux-samba/open-folder-mdns-error.png"
     alt=""
-    className={null}
+    className="rounded-none"
     priority
   />
   <figcaption>
