--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -17,6 +17,12 @@ Manage keyring files in `trusted.gpg.d` instead in Debian/Ubuntu Linux.
 https://itsfoss.com/apt-key-deprecated/<br />
 https://github.com/yarnpkg/yarn/issues/7866#issuecomment-1403268001
 
+### Rust
+
+#### blockchains
+
+https://github.com/rust-in-blockchain/awesome-blockchain-rust
+
 ### Node.JS
 
 #### Read a file one line at a time in node.js
@@ -79,4 +85,5 @@ https://paulbricman.com/reflections
 ### Books to Read
 
 https://ru.wikipedia.org/wiki/Полдень,_XXII_век<br />
-https://ru.wikipedia.org/wiki/Жук_в_муравейнике
+https://ru.wikipedia.org/wiki/Жук_в_муравейнике<br />
+https://ru.wikipedia.org/wiki/Несвятые_святые
