--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -23,6 +23,12 @@ https://github.com/yarnpkg/yarn/issues/7866#issuecomment-1403268001
 
 https://github.com/rust-in-blockchain/awesome-blockchain-rust
 
+### Protobufs
+
+#### Typescript
+
+https://blog.mechanicalrock.io/2022/04/08/getting-started-with-protobufs-and-typescript.html
+
 ### Node.JS
 
 #### Read a file one line at a time in node.js
