--- a/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
+++ b/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
@@ -31,7 +31,7 @@ i2cdetect -y 1
   </figcaption>
 </figure>
 
-If instead of `68`, the I2C address is `UU` (Unbound/Unknown) then the I2C
+If instead of `68` the I2C address is `UU` (Unbound/Unknown) then the I2C
 device has been detected but is not bound to the kernel driver.
 
 #### Setup RTC Clock
