--- a/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
+++ b/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
@@ -138,7 +138,7 @@ poetry completions bash >> ~/.bash_completion
 
 ### Poetry Plugin up and Package Versions
 
-`up` plugin updates dependencies and bumps their versions in pyproject.toml
+`up` plugin updates dependencies and bumps their versions in `pyproject.toml`
 file. It works similar to `yarn up` command in Node.js. Install plugin:
 
 ```bash
@@ -162,7 +162,7 @@ Display outdated packages only:
 ```bash
 poetry show --outdated
 ```
-Update 	&lt;package&gt; to the latest available version:
+Update 	`<package>` to the latest available version:
 
 ```bash
 poetry add <package>@latest
