--- a/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
+++ b/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
@@ -21,7 +21,7 @@ i2cdetect -y 1
 
 <figure>
   <Image
-    src="/static/notes/adding-rtc-clock-to-raspberry-pi-4/modprobe-correct-output.png"
+    src="/static/notes/adding-rtc-clock-to-raspberry-pi-4/modprobe-correct-68-output.png"
     alt=""
     className="!rounded-none"
     priority
@@ -31,8 +31,8 @@ i2cdetect -y 1
   </figcaption>
 </figure>
 
-If instead of `68`, the I2C address is `UU` (Unbound/Unknown) then the I2C
-device has been detected but is not bound to the kernel driver.
+If, at this stage instead of `68`, the I2C address is `UU` (Unbound/Unknown)
+then the I2C device has been detected but not working correctly.
 
 #### Setup RTC Clock
 
@@ -47,6 +47,21 @@ Run the following command as root to add I2C RTC device:
 ```bash
 echo ds1307 0x68 > /sys/class/i2c-adapter/i2c-1/new_device
 ```
+
+After above command, `i2cdetect -y 1` will no longer have access to I2C address
+and display `UU` instead of RTC Clock:
+
+<figure>
+  <Image
+    src="/static/notes/adding-rtc-clock-to-raspberry-pi-4/modprobe-correct-uu-output.png"
+    alt=""
+    className="!rounded-none"
+    priority
+  />
+  <figcaption>
+    <>Example of the correct output</>
+  </figcaption>
+</figure>
 
 Check the time on the RTC device:
 
