--- a/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
+++ b/pages/notes/adding-rtc-clock-to-raspberry-pi-4/2023-07-07.index.en.mdx
@@ -27,7 +27,7 @@ i2cdetect -y 1
     priority
   />
   <figcaption>
-    <>Example of the correct output</>
+    <>Example of the correct "68" output</>
   </figcaption>
 </figure>
 
@@ -59,7 +59,7 @@ and display `UU` instead of RTC Clock:
     priority
   />
   <figcaption>
-    <>Example of the correct output</>
+    <>Example of the correct "UU" output</>
   </figcaption>
 </figure>
 
