--- a/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
+++ b/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
@@ -3,7 +3,7 @@ title: Python pyenv and poetry Notes
 dateUpdated: '2023-05-05'
 description:
   Collection of Python pyenv and poetry application hints and resource
-  references. These instructions were tested on Ubuntu 22.04 LTS.
+  references. These hints were tested on Ubuntu 22.04 LTS.
 ---
 
 ## Installing pyenv on Linux
