--- a/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
+++ b/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
@@ -22,6 +22,12 @@ To add rust source, required for rust-analyzer:
 rustup component add rust-src
 ```
 
+To update installation:
+
+```bash
+rustup update
+```
+
 ### Environment Configuration
 
 Add the following lines to `~/.bashrc` (for interactive shells) and to
