--- a/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
+++ b/pages/notes/rust-analyzer/2023-07-11.index.en.mdx
@@ -55,7 +55,7 @@ cd rust-analyzer
 cargo xtask install --server # will install rust-analyzer into $HOME/.cargo/bin
 ```
 
-### From Pre-compiled Binary
+### From Pre-Compiled Binary
 
 Download and unpack the latest [rust-analyzer
 release](https://github.com/rust-lang/rust-analyzer/releases) e.g.:
