--- a/pages/notes/ni-compactdaq/2023-04-25.index.en.mdx
+++ b/pages/notes/ni-compactdaq/2023-04-25.index.en.mdx
@@ -35,7 +35,8 @@ sudo reboot
 ```
 
 Linux software does not include NI MAX GUI that is included in Windows software.
-Use `ni-hwcfg-utility` instead, as explained in this
+Instead, use `ni-hwcfg-utility` for GUI and `nidaqmxconfig` for CLI, as
+explained in this
 [NI support thread](https://knowledge.ni.com/KnowledgeArticleDetails?id=kA00Z0000019Y2XSAU&l=en-GB).
 
 #### References
